--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ header {
   color: #fff;
   text-transform: uppercase;
   font-weight: 700;
+  font-size: 1.1rem;
   height: 4rem;
   display: flex;
   align-items: center;
@@ -81,7 +82,7 @@ textarea {
   width: 100%;
   margin-top: .5rem;
   margin-bottom: 1rem;
-  padding: .75rem 1rem;
+  padding: 1rem 1rem;
 
   border: none;
   border-radius: 5px;
@@ -89,15 +90,25 @@ textarea {
 
 }
 
-/* This isn't right */
-:focus {
-  border: 2px solid blue;
+input:focus,
+select:focus,
+textarea:focus {
+  border: 2px solid #0e62b5;
 }
 
 input[type="checkbox"],
 input[type="radio"] {
   display: inline-block;
   width:auto;
+}
+
+/* Tom: Remember this genius pseudoclass! */
+::placeholder {
+  color: #A0A5AA;
+  font-size: .75rem;
+  font-weight: 300;
+  font-style: italic;
+  text-align: right;
 }
 
 .zip {
