adding elements for extra credit

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,11 @@ fieldset {
   border: none;
 }
 
+fieldset:first-child {
+  background-color: #49af9614;
+  margin-bottom: 1rem;
+}
+
 legend {
   margin-bottom: 1rem;
 }
@@ -79,6 +84,12 @@ legend {
   font-weight: 300;
   font-size: .9rem;
   color: #626f7b;
+}
+input,
+select,
+textarea,
+fieldset:first-child {
+  border-radius: 5px;
 }
 
 input,
@@ -91,9 +102,9 @@ textarea {
   padding: 1rem 1rem;
 
   border: none;
-  border-radius: 5px;
   background-color: #ECEEEF;
 
+  transition: all ease .5s;
 }
 
 textarea {
@@ -104,6 +115,10 @@ input:focus,
 select:focus,
 textarea:focus {
   border: 2px solid #0e62b5;
+
+  /*Full disclosure: I used a generator for the following inset shadow, mostly for syntax - hopefully that is ok. I did then change the parameters manually.
+  https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Background_and_Borders/Box-shadow_generator  */
+  box-shadow: inset 0px 2px 10px 1px rgba(91, 133, 150, 0.56);
 }
 
 input[type="checkbox"],
@@ -114,7 +129,7 @@ input[type="radio"] {
 }
 
 /* Tom: Remember this genius pseudoclass! */
-::placeholder {
+input[required]::placeholder {
   text-align: right;
 }
 
@@ -126,18 +141,11 @@ footer {
 }
 
 
-::placeholder,
+input[required]::placeholder,
 footer {
   font-size: .75rem;
   font-style: italic;
 }
-
-
-option:first-child {
-  color: #A0A5AA;
-  font-weight: 300;
-}
-
 
 .zip {
   width: 50%;
@@ -147,6 +155,11 @@ input[type="submit"] {
   background-color: #3FB3AC;
   margin: 2rem 0 .5rem;
   padding: 1.2rem;
+}
+
+input[type="submit"]:focus {
+  box-shadow: 0px 10px 22px -8px rgba(73, 175, 150, 0.56);
+  background-color: #247b75;
 }
 
 footer {
@@ -185,6 +198,7 @@ footer {
     width: 75%;
   }
 
+  /* specificity so that it cascades properly */
   fieldset:first-child input.zip {
     width: 25%;
   }
