--- a/css/styles.css
+++ b/css/styles.css
@@ -210,5 +210,12 @@ footer {
     padding: 1rem 0;
   }
 
+  /* may as well make it a hover state too - but only when hover is possible, so this is in the media query */
+
+  input[type="submit"]:hover {
+    box-shadow: 0px 10px 22px -8px rgba(73, 175, 150, 0.56);
+    background-color: #247b75;
+  }
+
 /* /media Q */
 }
